# arachne-runtime

./: .dockerignore  .flake8  .gitignore  README.md  poetry.toml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: pr_check_format.yaml  pr_test_arachne.yaml
device/: setup.sh
device/common/: install_poetry.sh  install_tvm.sh
device/jp45/: install.sh  pyproject.toml
device/jp46/: install.sh  pyproject.toml
device/raspi4/: install.sh  pyproject.toml
device/tvm_config/: jetson_config.cmake  raspi4_config.cmake
docker/: Makefile  README.md  base-gpu-jp4x.Dockerfile  ci-gpu.Dockerfile  ci.Dockerfile  devel-gpu.Dockerfile  devel.Dockerfile  jp45.Dockerfile  jp46.Dockerfile  ubuntu1804-gpu.Dockerfile  ubuntu2004-gpu.Dockerfile
docker/install/: install_devtools.sh  install_opencv_deps.sh  install_poetry.sh  install_python3.sh  install_tvm_deps.sh
examples/: run_runtime.ipynb
plugin_examples/cpp/: CMakeLists.txt  README.md  cpp_runtime.cpp  cpp_runtime.ipynb  cpp_runtime.py
plugin_examples/simple/: dummy_model.txt  simple_runtime.ipynb  simple_runtime.py
python/arachne_runtime/: __init__.py
python/arachne_runtime/module/: tvm.py
python/arachne_runtime/rpc/client/: client.py
python/arachne_runtime/rpc/client/stubmgr/: serverstatus.py
python/arachne_runtime/rpc/protobuf/: runtime_pb2.py  runtime_pb2_grpc.py
python/arachne_runtime/rpc/protobuf/definition/: runtime.proto
python/arachne_runtime/rpc/servicer/: servicer.py
python/arachne_runtime/utils/: data.py  model_utils.py  onnx_utils.py  tf_utils.py  torch_utils.py
scripts/: _docker_init.sh  docker_launch.sh  install_tvm.sh
tests/: __init__.py  test_onnx.py  test_tflite.py  test_tvm_graph_executor.py
tests/rpc/: test_benchmark.py  test_multiple_client.py  test_run.py
tests/rpc/device/: conftest.py  test_edge.py
