[tool.poetry]
name = "arachne-runtime"
version = "0.1.0"
description = ""
authors = ["Shuntaro Sato <shuntaro.st@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "arachne_runtime", from="./python"}]

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
PyYAML = "^6.0"
grpcio = "^1.45.0"
grpcio-tools = "^1.45.0"
numpy = "^1.22.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
onnxruntime = "^1.11.0"
tensorflow = "^2.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py38']
include = '(\.pyi?$)'
exclude = '''
(
  /(
      \.github
    | \.git
    | \.vscode
    | docker\/
    | python\/arachne_runtime\/rpc\/protobuf\/*
  )/
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3
src_path = ["python/arachne_runtime"]
filter_files = true
skip_glob = "python/arachne_runtime/rpc/protobuf/*, */docker/**, */.vscode/**/*, */.git/**/*, */.github/**/*"
