[tool.poetry]
name = "arachne-runtime"
version = "0.0.1"
description = "A library for accelerating deploying your DNN models to your edge devices."
authors = ["Takafumi Kubota <takafumi.kubota@fixstars.com>"]
license = "MIT"
packages = [
  { include="arachne_runtime", from="./python" },
]

[tool.poetry.dependencies]
python = ">=3.6.3,<3.7"
numpy = "<1.22.3"
packaging = "^21.3"
grpcio = "<1.45.0"
grpcio-tools = "<1.45.0"
PyYAML = "^6.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=6.2.0"
pytest-xdist = "^2.5.0"
flake8 = "^3.9.2"
isort = "^5.10.1"
cmake = "^3.22.4"
ninja = "^1.10.2.3"
opencv-python = "<4.5.5.64"
tensorflow = "2.4.0"
tflite = "2.4.0"
onnxruntime = "1.10.0"
# onnxruntime-gpu = "1.10.0+jp46"
# tensorflow = "2.6.3+jp46"
# tflite = "2.6.3"
ipykernel = "<6.13.0"

# [[tool.poetry.source]]
# name = "arachne"
# url = "https://pypi.arachne.dev/"
# secondary = true



[build-system]
requires = ["poetry-core>=1.1.0a6"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py36']
include = '(\.pyi?$)'
exclude = '''

(
  /(
      \.github
    | \.git
    | \.vscode
    | 3rdparty
    | docker\/
    | python\/arachne_runtime\/rpc\/protobuf\/*
  )/
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["python/arachne_runtime"]
filter_files = true
skip_glob = "python/arachne_runtime/rpc/protobuf/*, */3rdparty/**/*,*/docker/**/*,*/.vscode/**/*,*/.git/**/*,*/.github/**/*,"

[tool.pyright]
exclude = ["python/arachne_runtime/rpc/protobuf/*", "./3rdparty/**/*", "./.venv/**/*", "./.git/**/*", "./build/**/*", "./tmp/**/*"]
ignore = ["python/arachne_runtime/rpc/protobuf/*", "./3rdparty/**/*", "./.venv/**/*", "./.git/**/*", "./build/**/*", "./tmp/**/*"]
